Rev. 2 of the performance report: full mod list, DSL data, log findings
Corrects two claims from Rev. 1, both caused by the mod list being truncated
at "libIPN" in the original input:

- Lithium, ModernFix, ImmediatelyFast, Krypton, Enhanced Block Entities,
  Sodium Extra and Reese's are all installed. The "missing performance mods"
  section is gone, and with it the prediction that Lithium would halve MSPT —
  the measured 9 ms already includes it. The tick-cost suspicion moves to
  Radical Cobblemon Trainers, Fight or Flight and simulation distance.
- The D:26 in the Iris shadow line reflects render distance, not the pack's
  shadow distance. The defensible number is 870 sections in the shadow pass.
  The lever stays the same but is named render distance, which matters because
  the pack's shadow slider is greyed out.

New material: DSL line data shows 79.8/23.3 Mbit/s line capacity against
55.2/11.3 provisioned at 284 m with zero errors, so the line is being wasted
on too small a tariff. Log analysis finds Terralith disabled on a world
generated with it (biome fallback, therefore wrong Cobblemon spawns, plus
error spam on the server thread), a Radical Cobblemon Trainers / API version
mismatch, two benign mixin conflicts (ModernFix/Lithium, Krypton/e4mc), and a
Sodium beta paired with stable Iris that explains the shader uniform warnings.

Also adds: why 8 GB heap beats 16 or 32, Java argument sets per machine, what
Open to LAN plus e4mc does and does not transfer, a complete settings list for
Paul including Sodium Extra and Windows items, the G-Sync configuration for the
200 Hz DisplayPort panel, which Noisium fork and why it can wait, and a note
that spark is not installed so the profiler command cannot run yet.

Co-Authored-By: Claude Opus 5 <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_01G2urzHDoBGxaho3xgBWmGe